[package]
name = "actix-calculator"
version = "0.1.0"
authors = ["strix <p.smagin@napoleonit.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
tera = "1.0.0-beta.14"
serde = "1.0.98"
reverse = { git = "https://github.com/NightStr/cli_calculator" }