[package]
name = "actix-calculator"
version = "0.1.0"
authors = ["strix <p.smagin@napoleonit.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
tera = "1.5.0"
serde = "1.0.117"
reverse = { git = "https://github.com/NightStr/cli_calculator" }